--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>MY FIRST CRUD USING EXPRESS</h1>
     <div class="card text-center">
-        <form action="POST">
+        <form action="/crud.html" method="POST">
             <label for="user_name" class="form-label">Name</label>
             <input type="text" class="form-control" id="user_name" placeholder="Entre your name">
             <label for="email" class="form-label">Email</label>
