--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD Express</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <style>
+        .text-center{
+            margin: 20px 100px 0px 100px;
+            padding: 20px;
+        }
+        .text-center input, .text-center textarea{
+            width: 850px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .sub{
+            margin-top: 20px;
+        }
+        h1{
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>MY FIRST CRUD USING EXPRESS</h1>
